# pixforge

./: README.md  pyproject.toml  requirements.txt
.hermes/plans/: 2026-04-16_222000-pixforge-scaffold.md  2026-04-16_230000-pixforge-gui.md
pixforge/: __init__.py  cli.py  converter.py  transforms.py  utils.py
pixforge/gui/: app.py
pixforge/gui/static/css/: style.css
pixforge/gui/static/js/: app.js
pixforge/gui/templates/: index.html
tests/: test_converter.py  test_transforms.py
